# openapi/user-api.yaml
@@ -62,6 +62,41 @@ paths:
         "401":
           description: Token non valido o assente
 
+    patch:
+      tags:
+        - User
+      summary: Modifica i dati dell'utente autenticato
+      security:
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                surname:
+                  type: string
+                email:
+                  type: string
+                  format: email
+                image:
+                  type: string
+                  format: binary
+      responses:
+        "200":
+          description: Utente aggiornato con successo
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/UserResponse"
+        "400":
+          description: Dati non validi
+        "401":
+          description: Non autorizzato
+
 components:
   securitySchemes:
     bearerAuth:
@@ -130,3 +165,5 @@ components:
           type: array
           items:
             type: string
+        imageProfileUrl:
+          type: string
