# src/main/java/com/springmememuseumrest/service/UserService.java
@@ -7,10 +7,19 @@ import org.openapispec.model.RegisterResponse;
 import org.openapispec.model.UserResponse;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
+import org.springframework.web.multipart.MultipartFile;
 
 @Service
 public interface UserService {
     ResponseEntity<RegisterResponse> usersRegister(RegisterRequest registerRequest);
-    JwtResponse userslogin(LoginRequest loginRequest);
+    JwtResponse userslogin(
+        LoginRequest loginRequest
+    );
     ResponseEntity<UserResponse> getUserData();
+    ResponseEntity<UserResponse> updateUserData(
+        String name,
+        String surname,
+        String email,
+        MultipartFile image
+    );
 }
